# Huffman

./: CMakeLists.txt  testing.cpp
lib/: CMakeLists.txt  Code.cpp  Code.h  huffman.cpp  huffman.h
lib/include/huffman/: Code.h  huffman.h
lib/src/: Code.cpp  huffman.cpp
lib/tests/: testing.cpp
src/: BufferedReader.h  BufferedWriter.cpp  BufferedWriter.h  main.cpp
util/: CMakeLists.txt
util/src/: BufferedReader.cpp  BufferedReader.h  BufferedWriter.cpp  BufferedWriter.h  main.cpp
